--- a/src/css/globals/typography.css
+++ b/src/css/globals/typography.css
@@ -102,7 +102,7 @@ a {
 		outline: var(--border-width-base) dashed var(--blue);
 	}
 
-	svg {
+	& svg {
 		display: inline-block;
 		vertical-align: baseline;
 	}
